--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </header>
 
   <main>
-    <form id='evaluation-form' action="">
+    <form id='evaluation-form' class='flex-container' action="">
 
     </form>
   </main>
