--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
     </div>
   </header>
 
-  <main>
+  <main class='flex-container'>
     <form id='evaluation-form' class='flex-container' action="">
-
     </form>
+    <div class="image-main">
+      <img  id='trybewarts-forms-logo' src="images/trybewarts-colored.svg" alt="">
+    </div>
   </main>
 
   <script src="script.js"></script>
