--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
 
   <main class='flex-container'>
     <form id='evaluation-form' class='flex-container' action="">
+      <label for="name">Nome:</label>
+      <input type="text" name="name" id="input-name" placeholder="Nome">
+
+      <label for="lastname">Sobrenome:</label>
+      <input type="text" name="lastname" id="input-lastname" placeholder="Sobrenome">
+
+      <label for="email">Email:</label>
+      <input type="email" name="email" id="input-email" placeholder="Email">
+
     </form>
     <div class="image-main">
       <img  id='trybewarts-forms-logo' src="images/trybewarts-colored.svg" alt="">
