--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trybewarts</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -20,8 +21,8 @@
     <div class='login-container'>
       <form class='trybewarts-login flex-row' action="">
         <div class='flex-container'>
-          <input type="email" name='email' id='email' placeholder="Login">
-          <input type="password" name="password" id='password' placeholder="Senha">
+          <input type="email" name='email' id='email' placeholder="Login" class='form-control'>
+          <input type="password" name="password" id='password' placeholder="Senha" class='form-control'>
         </div>
         <button id='btn-login'>Entrar</button>
       </form>
@@ -31,13 +32,13 @@
   <main class='flex-container'>
     <form id='evaluation-form' class='flex-container' action="">
       <label for="name">Nome:</label>
-      <input type="text" name="name" id="input-name" placeholder="Nome">
+      <input type="text" name="name" id="input-name" placeholder="Nome" class='form-control'>
 
       <label for="lastname">Sobrenome:</label>
-      <input type="text" name="lastname" id="input-lastname" placeholder="Sobrenome">
+      <input type="text" name="lastname" id="input-lastname" placeholder="Sobrenome" class='form-control'>
 
       <label for="email">Email:</label>
-      <input type="email" name="email" id="input-email" placeholder="Email">
+      <input type="email" name="email" id="input-email" placeholder="Email" class='form-control'>
 
     </form>
     <div class="image-main">
