Adiciona borda e cor ao form, centraliza o login

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
   <main class='flex-container'>
     <form id='evaluation-form' class='flex-container' action="">
-      <label for="name">Nome:</label>
+      <fieldset class="form-group field-border">
+        <label for="name">Nome:</label>
       <input type="text" name="name" id="input-name" placeholder="Nome" class='form-control'>
 
       <label for="lastname">Sobrenome:</label>
@@ -39,7 +40,7 @@
 
       <label for="email">Email:</label>
       <input type="email" name="email" id="input-email" placeholder="Email" class='form-control'>
-
+      </fieldset>
     </form>
     <div class="image-main">
       <img  id='trybewarts-forms-logo' src="images/trybewarts-colored.svg" alt="">
