--- a/index.html
+++ b/index.html
@@ -1,53 +1,100 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Trybewarts</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oldenburg&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trybewarts</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-</head>
+  <body>
+    <header class="header">
+      <div class="image-container">
+        <img
+          class="trybewarts-header-logo"
+          src="images/trybewarts-header-logo.svg"
+          alt="logo trybe"
+        />
+      </div>
 
-<body>
-  <header class="header">
-    <div class="image-container">
-      <img class='trybewarts-header-logo' src="images/trybewarts-header-logo.svg" alt="logo trybe">
-    </div>
+      <h1 id="trybewarts-header-title">Trybewarts</h1>
 
-    <h1 id="trybewarts-header-title">Trybewarts</h1>
+      <div class="login-container">
+        <form class="trybewarts-login flex-row" action="">
+          <div class="flex-container">
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Login"
+              class="form-control"
+            />
+            <input
+              type="password"
+              name="password"
+              id="password"
+              placeholder="Senha"
+              class="form-control"
+            />
+          </div>
+          <button id="btn-login">Entrar</button>
+        </form>
+      </div>
+    </header>
 
-    <div class='login-container'>
-      <form class='trybewarts-login flex-row' action="">
-        <div class='flex-container'>
-          <input type="email" name='email' id='email' placeholder="Login" class='form-control'>
-          <input type="password" name="password" id='password' placeholder="Senha" class='form-control'>
-        </div>
-        <button id='btn-login'>Entrar</button>
+    <main class="flex-container">
+      <form id="evaluation-form" class="flex-container" action="">
+        <fieldset class="form-group field-border">
+          <label for="name">Nome:</label>
+          <input
+            type="text"
+            name="name"
+            id="input-name"
+            placeholder="Nome"
+            class="form-control"
+          />
+
+          <label for="lastname">Sobrenome:</label>
+          <input
+            type="text"
+            name="lastname"
+            id="input-lastname"
+            placeholder="Sobrenome"
+            class="form-control"
+          />
+
+          <label for="email">Email:</label>
+          <input
+            type="email"
+            name="email"
+            id="input-email"
+            placeholder="Email"
+            class="form-control"
+          />
+        </fieldset>
       </form>
-    </div>
-  </header>
+      <div class="image-main">
+        <img
+          id="trybewarts-forms-logo"
+          src="images/trybewarts-colored.svg"
+          alt=""
+        />
+      </div>
+    </main>
 
-  <main class='flex-container'>
-    <form id='evaluation-form' class='flex-container' action="">
-      <fieldset class="form-group field-border">
-        <label for="name">Nome:</label>
-      <input type="text" name="name" id="input-name" placeholder="Nome" class='form-control'>
-
-      <label for="lastname">Sobrenome:</label>
-      <input type="text" name="lastname" id="input-lastname" placeholder="Sobrenome" class='form-control'>
-
-      <label for="email">Email:</label>
-      <input type="email" name="email" id="input-email" placeholder="Email" class='form-control'>
-      </fieldset>
-    </form>
-    <div class="image-main">
-      <img  id='trybewarts-forms-logo' src="images/trybewarts-colored.svg" alt="">
-    </div>
-  </main>
-
-  <script src="script.js"></script>
-</body>
-
+    <script src="script.js"></script>
+  </body>
 </html>
