Adiciona tag strong no form

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <main class="flex-container">
       <form id="evaluation-form" class="flex-container" action="">
         <fieldset class="form-group field-border">
-          <label for="name">Nome:</label>
+          <label for="name"><strong>Nome:</strong></label>
           <input
             type="text"
             name="name"
@@ -67,7 +67,7 @@
             class="form-control"
           />
 
-          <label for="lastname">Sobrenome:</label>
+          <label for="lastname"><strong>Sobrenome:</strong></label>
           <input
             type="text"
             name="lastname"
@@ -76,7 +76,7 @@
             class="form-control"
           />
 
-          <label for="email">Email:</label>
+          <label for="email"><strong>Email:</strong></label>
           <input
             type="email"
             name="email"
