--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               class="form-control"
             />
           </div>
-          <button id="btn-login">Entrar</button>
+          <button id="btn-login" class="btn btn-dark">Entrar</button>
         </form>
       </div>
     </header>
