Adiciona estilo ao select

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <main class="flex-container">
       <form id="evaluation-form" class="flex-container" action="">
         <fieldset class="form-group field-border">
-          <label for="name"><strong>Nome:</strong></label>
+          <label for="name" class="form-label"><strong>Nome:</strong></label>
           <input
             type="text"
             name="name"
@@ -67,7 +67,7 @@
             class="form-control"
           />
 
-          <label for="lastname"><strong>Sobrenome:</strong></label>
+          <label for="lastname" class="form-label"><strong>Sobrenome:</strong></label>
           <input
             type="text"
             name="lastname"
@@ -76,7 +76,7 @@
             class="form-control"
           />
 
-          <label for="email"><strong>Email:</strong></label>
+          <label for="email" class="form-label"><strong>Email:</strong></label>
           <input
             type="email"
             name="email"
@@ -85,8 +85,8 @@
             class="form-control"
           />
 
-          <label for="house"><strong>Casa:</strong></label>
-          <select name="house" id="house" class="custom-select">
+          <label for="house" class="form-label"><strong>Casa:</strong></label>
+          <select name="house" id="house" class="form-select">
             <option value="Gitnória" id="gitnoria-house">Gitnória</option>
             <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
             <option value="Corvinode" id="corvinode-house">Corvinode</option>
