--- a/index.html
+++ b/index.html
@@ -58,40 +58,47 @@
     <main class="flex-container">
       <form id="evaluation-form" class="flex-container" action="">
         <fieldset class="form-group field-border">
-          <label for="name" class="form-label"><strong>Nome:</strong></label>
-          <input
-            type="text"
-            name="name"
-            id="input-name"
-            placeholder="Nome"
-            class="form-control"
-          />
+          <section>
+            <label for="name" class="form-label"><strong>Nome:</strong></label>
+            <input
+              type="text"
+              name="name"
+              id="input-name"
+              placeholder="Nome"
+              class="form-control"
+            />
 
-          <label for="lastname" class="form-label"><strong>Sobrenome:</strong></label>
-          <input
-            type="text"
-            name="lastname"
-            id="input-lastname"
-            placeholder="Sobrenome"
-            class="form-control"
-          />
+            <label for="lastname" class="form-label"
+              ><strong>Sobrenome:</strong></label
+            >
+            <input
+              type="text"
+              name="lastname"
+              id="input-lastname"
+              placeholder="Sobrenome"
+              class="form-control"
+            />
+          </section>
+          <section>
+            <label for="email" class="form-label"
+              ><strong>Email:</strong></label
+            >
+            <input
+              type="email"
+              name="email"
+              id="input-email"
+              placeholder="Email"
+              class="form-control"
+            />
 
-          <label for="email" class="form-label"><strong>Email:</strong></label>
-          <input
-            type="email"
-            name="email"
-            id="input-email"
-            placeholder="Email"
-            class="form-control"
-          />
-
-          <label for="house" class="form-label"><strong>Casa:</strong></label>
-          <select name="house" id="house" class="form-select">
-            <option value="Gitnória" id="gitnoria-house">Gitnória</option>
-            <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
-            <option value="Corvinode" id="corvinode-house">Corvinode</option>
-            <option value="Pytherina" id="pytherina-house">Pytherina</option>
-          </select>
+            <label for="house" class="form-label"><strong>Casa:</strong></label>
+            <select name="house" id="house" class="form-select">
+              <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+              <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
+              <option value="Corvinode" id="corvinode-house">Corvinode</option>
+              <option value="Pytherina" id="pytherina-house">Pytherina</option>
+            </select>
+          </section>
         </fieldset>
       </form>
       <div class="image-main">
