--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
           </section>
           <section id="family-section">
             <label for="family" id="label-family">Qual sua família?</label>
-            <label for="frontend"><input type="radio" name="family" id="frontend" value="Frontend">Frontend</label>
-            <label for="backend"><input type="radio" name="family" id="backend" value="Backend">Backend</label>
-            <label for="fullstack"><input type="radio" name="family" id="fullstack" value="FullStack">FullStack</label>
+            <label for="frontend"><input type="radio" name="family" id="frontend" value="Frontend" class="form-check-input">Frontend</label>
+            <label for="backend"><input type="radio" name="family" id="backend" value="Backend" class="form-check-input">Backend</label>
+            <label for="fullstack"><input type="radio" name="family" id="fullstack" value="FullStack" class="form-check-input">FullStack</label>
           </section>
         </fieldset>
       </form>
