Adiciona botoes requisito 13

--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@
             <label for="subject" id="label-content"
               >Qual conteúdo você está com mais vontade de aprender?</label
             >
+            <div class="flex-container">  
+              <label for="hofs"><input type="checkbox" name="subject" id="hofs" class="subject" value="HoFs">HoFs</label>
+              <label for="jest"><input type="checkbox" name="subject" id="jest" class="subject" value="Jest">Jest</label>
+              <label for="promises"><input type="checkbox" name="subject" id="promises" class="subject" value="Promises">Promises</label>
+              <label for="react"><input type="checkbox" name="subject" id="react" class="subject" value="React">React</label>
+              <label for="sql"><input type="checkbox" name="subject" id="sql" class="subject" value="SQL">SQL</label>
+              <label for="python"><input type="checkbox" name="subject" id="python" class="subject" value="Python">Python</label>
+            </div>
           </section>
         </fieldset>
       </form>
