Adiciona tag strong em label

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </select>
           </section>
           <section id="family-section">
-            <label for="family" id="label-family">Qual sua família?</label>
+            <label for="family" id="label-family"><strong>Qual sua família?</strong></label>
             <label for="frontend"
               ><input
                 type="radio"
@@ -131,15 +131,15 @@
           </section>
           <section id="learning-section">
             <label for="subject" id="label-content"
-              >Qual conteúdo você está com mais vontade de aprender?</label
+              ><strong>Qual conteúdo você está com mais vontade de aprender?</strong></label
             >
             <div class="flex-container">  
-              <label for="hofs"><input type="checkbox" name="subject" id="hofs" class="subject" value="HoFs">HoFs</label>
-              <label for="jest"><input type="checkbox" name="subject" id="jest" class="subject" value="Jest">Jest</label>
-              <label for="promises"><input type="checkbox" name="subject" id="promises" class="subject" value="Promises">Promises</label>
-              <label for="react"><input type="checkbox" name="subject" id="react" class="subject" value="React">React</label>
-              <label for="sql"><input type="checkbox" name="subject" id="sql" class="subject" value="SQL">SQL</label>
-              <label for="python"><input type="checkbox" name="subject" id="python" class="subject" value="Python">Python</label>
+              <label for="hofs"><input type="checkbox" name="subject" id="hofs" class="subject form-check-input" value="HoFs">HoFs</label>
+              <label for="jest"><input type="checkbox" name="subject" id="jest" class="subject  form-check-input" value="Jest">Jest</label>
+              <label for="promises"><input type="checkbox" name="subject" id="promises" class="subject form-check-input" value="Promises">Promises</label>
+              <label for="react"><input type="checkbox" name="subject" id="react" class="subject form-check-input" value="React">React</label>
+              <label for="sql"><input type="checkbox" name="subject" id="sql" class="subject form-check-input" value="SQL">SQL</label>
+              <label for="python"><input type="checkbox" name="subject" id="python" class="subject form-check-input" value="Python">Python</label>
             </div>
           </section>
         </fieldset>
