conclui requisito 15 (sem estilo)

--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
           <label>10</label>
           <input type="radio" name="rate" id="" value="10">
         </section>
+
+        <section>
+          <label for="textarea" class="textarea">Deixe seu comentário:</label>
+          <br>
+          <textarea name="textarea" id="textarea" cols="60" rows="5" maxlength="500"></textarea>
+        </section>
       </fieldset>
     </form>
     <div class="image-main">
