--- a/index.html
+++ b/index.html
@@ -112,6 +112,11 @@
           <br>
           <textarea name="textarea" id="textarea" cols="60" rows="5" maxlength="500"></textarea>
         </section>
+
+        <section>
+          <label for="checkbox" id="label-infos">Você concorda com o uso das informações acima?</label>
+          <input type="checkbox" name="checkbox" id="agreement" required>
+        </section>
       </fieldset>
     </form>
     <div class="image-main">
