--- a/index.html
+++ b/index.html
@@ -1,119 +1,255 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Trybewarts</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oldenburg&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Trybewarts</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Oldenburg&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-  <link rel="stylesheet" href="style.css" />
-</head>
+  <body>
+    <header class="header">
+      <div class="image-container">
+        <img
+          class="trybewarts-header-logo"
+          src="images/trybewarts-header-logo.svg"
+          alt="logo trybe"
+        />
+      </div>
 
-<body>
-  <header class="header">
-    <div class="image-container">
-      <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo trybe" />
-    </div>
+      <h1 id="trybewarts-header-title">Trybewarts</h1>
 
-    <h1 id="trybewarts-header-title">Trybewarts</h1>
-
-    <div class="login-container">
-      <form class="trybewarts-login flex-row" action="">
-        <div class="flex-container">
-          <input type="email" name="email" id="email" placeholder="Login" class="form-control" />
-          <input type="password" name="password" id="password" placeholder="Senha" class="form-control" />
-        </div>
-        <button id="btn-login" class="btn btn-dark">Entrar</button>
-      </form>
-    </div>
-  </header>
-
-  <main class="flex-container">
-    <form id="evaluation-form" class="flex-container" action="">
-      <fieldset class="form-group field-border">
-        <section class="flex-container">
-          <label for="name" class="form-label"><strong>Nome:</strong></label>
-          <input type="text" name="name" id="input-name" placeholder="Nome" class="form-control" />
-
-          <label for="lastname" class="form-label"><strong>Sobrenome:</strong></label>
-          <input type="text" name="lastname" id="input-lastname" placeholder="Sobrenome" class="form-control" />
-        </section>
-        <section class="flex-container">
-          <label for="email" class="form-label"><strong>Email:</strong></label>
-          <input type="email" name="email" id="input-email" placeholder="Email" class="form-control" />
-
-          <label for="house" class="form-label"><strong>Casa:</strong></label>
-          <select name="house" id="house" class="form-select">
-            <option value="Gitnória" id="gitnoria-house">Gitnória</option>
-            <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
-            <option value="Corvinode" id="corvinode-house">Corvinode</option>
-            <option value="Pytherina" id="pytherina-house">Pytherina</option>
-          </select>
-        </section>
-        <section id="family-section">
-          <label for="family" id="label-family"><strong>Qual sua família?</strong></label>
-          <label for="frontend"><input type="radio" name="family" id="frontend" value="Frontend"
-              class="form-check-input" /> Frontend</label>
-          <label for="backend"><input type="radio" name="family" id="backend" value="Backend"
-              class="form-check-input" /> Backend</label>
-          <label for="fullstack"><input type="radio" name="family" id="fullstack" value="FullStack"
-              class="form-check-input" /> FullStack</label>
-        </section>
-        <section id="learning-section">
-          <label for="subject" id="label-content"><strong>Qual conteúdo você está com mais vontade de
-              aprender?</strong></label>
+      <div class="login-container">
+        <form class="trybewarts-login flex-row" action="">
           <div class="flex-container">
-            <label for="hofs"><input type="checkbox" name="subject" id="hofs" class="subject form-check-input"
-                value="HoFs"> HoFs</label>
-            <label for="jest"><input type="checkbox" name="subject" id="jest" class="subject  form-check-input"
-                value="Jest"> Jest</label>
-            <label for="promises"><input type="checkbox" name="subject" id="promises" class="subject form-check-input"
-                value="Promises"> Promises</label>
-            <label for="react"><input type="checkbox" name="subject" id="react" class="subject form-check-input"
-                value="React"> React</label>
-            <label for="sql"><input type="checkbox" name="subject" id="sql" class="subject form-check-input"
-                value="SQL"> SQL</label>
-            <label for="python"><input type="checkbox" name="subject" id="python" class="subject form-check-input"
-                value="Python"> Python</label>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Login"
+              class="form-control"
+            />
+            <input
+              type="password"
+              name="password"
+              id="password"
+              placeholder="Senha"
+              class="form-control"
+            />
           </div>
-        </section>
+          <button id="btn-login" class="btn btn-dark">Entrar</button>
+        </form>
+      </div>
+    </header>
 
-        <section>
-          <label id="label-rate">Como você avalia a Trybewarts?</label>
-          <label>1</label>
-          <input type="radio" name="rate" id="" value="1">
-          <label>2</label>
-          <input type="radio" name="rate" id="" value="2">
-          <label>3</label>
-          <input type="radio" name="rate" id="" value="3">
-          <label>4</label>
-          <input type="radio" name="rate" id="" value="4">
-          <label>5</label>
-          <input type="radio" name="rate" id="" value="5">
-          <label>6</label>
-          <input type="radio" name="rate" id="" value="6">
-          <label>7</label>
-          <input type="radio" name="rate" id="" value="7">
-          <label>8</label>
-          <input type="radio" name="rate" id="" value="8">
-          <label>9</label>
-          <input type="radio" name="rate" id="" value="9">
-          <label>10</label>
-          <input type="radio" name="rate" id="" value="10">
-        </section>
-      </fieldset>
-    </form>
-    <div class="image-main">
-      <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="" />
-    </div>
-  </main>
+    <main class="flex-container">
+      <form id="evaluation-form" class="flex-container" action="">
+        <fieldset class="form-group field-border">
+          <section class="flex-container">
+            <label for="name" class="form-label"><strong>Nome:</strong></label>
+            <input
+              type="text"
+              name="name"
+              id="input-name"
+              placeholder="Nome"
+              class="form-control"
+            />
 
-  <script src="script.js"></script>
-</body>
+            <label for="lastname" class="form-label"
+              ><strong>Sobrenome:</strong></label
+            >
+            <input
+              type="text"
+              name="lastname"
+              id="input-lastname"
+              placeholder="Sobrenome"
+              class="form-control"
+            />
+          </section>
+          <section class="flex-container">
+            <label for="email" class="form-label"
+              ><strong>Email:</strong></label
+            >
+            <input
+              type="email"
+              name="email"
+              id="input-email"
+              placeholder="Email"
+              class="form-control"
+            />
 
+            <label for="house" class="form-label"><strong>Casa:</strong></label>
+            <select name="house" id="house" class="form-select">
+              <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+              <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
+              <option value="Corvinode" id="corvinode-house">Corvinode</option>
+              <option value="Pytherina" id="pytherina-house">Pytherina</option>
+            </select>
+          </section>
+          <section id="family-section">
+            <label for="family" id="label-family"
+              ><strong>Qual sua família?</strong></label
+            >
+            <label for="frontend"
+              ><input
+                type="radio"
+                name="family"
+                id="frontend"
+                value="Frontend"
+                class="form-check-input"
+              />
+              Frontend</label
+            >
+            <label for="backend"
+              ><input
+                type="radio"
+                name="family"
+                id="backend"
+                value="Backend"
+                class="form-check-input"
+              />
+              Backend</label
+            >
+            <label for="fullstack"
+              ><input
+                type="radio"
+                name="family"
+                id="fullstack"
+                value="FullStack"
+                class="form-check-input"
+              />
+              FullStack</label
+            >
+          </section>
+          <section id="learning-section">
+            <label for="subject" id="label-content"
+              ><strong
+                >Qual conteúdo você está com mais vontade de aprender?</strong
+              ></label
+            >
+            <div class="flex-container">
+              <label for="hofs"
+                ><input
+                  type="checkbox"
+                  name="subject"
+                  id="hofs"
+                  class="subject form-check-input"
+                  value="HoFs"
+                />
+                HoFs</label
+              >
+              <label for="jest"
+                ><input
+                  type="checkbox"
+                  name="subject"
+                  id="jest"
+                  class="subject form-check-input"
+                  value="Jest"
+                />
+                Jest</label
+              >
+              <label for="promises"
+                ><input
+                  type="checkbox"
+                  name="subject"
+                  id="promises"
+                  class="subject form-check-input"
+                  value="Promises"
+                />
+                Promises</label
+              >
+              <label for="react"
+                ><input
+                  type="checkbox"
+                  name="subject"
+                  id="react"
+                  class="subject form-check-input"
+                  value="React"
+                />
+                React</label
+              >
+              <label for="sql"
+                ><input
+                  type="checkbox"
+                  name="subject"
+                  id="sql"
+                  class="subject form-check-input"
+                  value="SQL"
+                />
+                SQL</label
+              >
+              <label for="python"
+                ><input
+                  type="checkbox"
+                  name="subject"
+                  id="python"
+                  class="subject form-check-input"
+                  value="Python"
+                />
+                Python</label
+              >
+            </div>
+          </section>
+
+          <section>
+            <label id="label-rate">Como você avalia a Trybewarts?</label>
+            <div>
+              <label for="1"
+                ><input type="radio" name="rate" id="1" value="1" /> 1</label
+              >
+              <label for="2"
+                ><input type="radio" name="rate" id="2" value="2" /> 2</label
+              >
+              <label for="3"
+                ><input type="radio" name="rate" id="3" value="3" /> 3</label
+              >
+              <label for="4"
+                ><input type="radio" name="rate" id="4" value="4" /> 4</label
+              >
+              <label for="5"
+                ><input type="radio" name="rate" id="5" value="5" /> 5</label
+              >
+              <label for="6"
+                ><input type="radio" name="rate" id="6" value="6" /> 6</label
+              >
+              <label for="7"
+                ><input type="radio" name="rate" id="7" value="7" /> 7</label
+              >
+              <label for="8"
+                ><input type="radio" name="rate" id="8" value="8" /> 8</label
+              >
+              <label for="9"
+                ><input type="radio" name="rate" id="9" value="9" /> 9</label
+              >
+              <label for="10"
+                ><input type="radio" name="rate" id="10" value="10" /> 10</label
+              >
+            </div>
+          </section>
+        </fieldset>
+      </form>
+      <div class="image-main">
+        <img
+          id="trybewarts-forms-logo"
+          src="images/trybewarts-colored.svg"
+          alt=""
+        />
+      </div>
+    </main>
+
+    <script src="script.js"></script>
+  </body>
 </html>
