conclui requisito 18 (req 2 ainda com problema)

--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
           <label for="checkbox" id="label-infos">Você concorda com o uso das informações acima?</label>
           <input type="checkbox" name="checkbox" id="agreement" required>
         </section>
+
+        <section>
+          <button type="submit" id="submit-btn" disabled>Enviar</button>
+        </section>
       </fieldset>
     </form>
     <div class="image-main">
