--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         <section class="flex-container">
           <label for="name" class="form-label"><strong>Nome:</strong></label>
           <input type="text" name="name" id="input-name" placeholder="Nome" class="form-control" />
+          <label for="lastname" class="form-label"><strong>Sobrenome:</strong></label>
+          <input type="text" name="lastname" id="input-lastname" placeholder="Sobrenome" class="form-control" />
+          <label for="email" class="form-label"><strong>Email:</strong></label>
+          <input type="text" name="email" id="input-email" placeholder="Email" class="form-control" />
 
           <label for="house" class="form-label"><strong>Casa:</strong></label>
           <select name="house" id="house" class="form-select">
@@ -88,21 +92,20 @@
         <section>
           <label id="label-rate">Como você avalia a Trybewarts?</label>
           <div>
-            <label for="1"><input type="radio" name="rate" id="1" value="1" /> 1</label>
-            <label for="2"><input type="radio" name="rate" id="2" value="2" /> 2</label>
-            <label for="3"><input type="radio" name="rate" id="3" value="3" /> 3</label>
-            <label for="4"><input type="radio" name="rate" id="4" value="4" /> 4</label>
-            <label for="5"><input type="radio" name="rate" id="5" value="5" /> 5</label>
-            <label for="6"><input type="radio" name="rate" id="6" value="6" /> 6</label>
-            <label for="7"><input type="radio" name="rate" id="7" value="7" /> 7</label>
-            <label for="8"><input type="radio" name="rate" id="8" value="8" /> 8</label>
-            <label for="9"><input type="radio" name="rate" id="9" value="9" /> 9</label>
-            <label for="10"><input type="radio" name="rate" id="10" value="10" /> 10</label>
+            <label for="1">1 <input type="radio" name="rate" id="1" value="1" /></label>
+            <label for="2">2 <input type="radio" name="rate" id="2" value="2" /></label>
+            <label for="3">3 <input type="radio" name="rate" id="3" value="3" /></label>
+            <label for="4">4 <input type="radio" name="rate" id="4" value="4" /></label>
+            <label for="5">5 <input type="radio" name="rate" id="5" value="5" /></label>
+            <label for="6">6 <input type="radio" name="rate" id="6" value="6" /></label>
+            <label for="7">7 <input type="radio" name="rate" id="7" value="7" /></label>
+            <label for="8">8 <input type="radio" name="rate" id="8" value="8" /></label>
+            <label for="9">9 <input type="radio" name="rate" id="9" value="9" /></label>
+            <label for="10">10 <input type="radio" name="rate" id="10" value="10" /></label>
           </div>
           <section>
             <label for="textarea" class="textarea">Deixe seu comentário:</label>
-            <br>
-            <textarea name="textarea" id="textarea" cols="60" rows="5" maxlength="500"></textarea>
+            <textarea name="textarea" id="textarea" cols="30" rows="5" maxlength="500"></textarea>
           </section>
 
           <section>
