Resolve conflitos e recupera design do form

--- a/index.html
+++ b/index.html
@@ -38,11 +38,36 @@
       <fieldset class="form-group field-border">
         <section class="flex-container">
           <label for="name" class="form-label"><strong>Nome:</strong></label>
-          <input type="text" name="name" id="input-name" placeholder="Nome" class="form-control" />
-          <label for="lastname" class="form-label"><strong>Sobrenome:</strong></label>
-          <input type="text" name="lastname" id="input-lastname" placeholder="Sobrenome" class="form-control" />
-          <label for="email" class="form-label"><strong>Email:</strong></label>
-          <input type="text" name="email" id="input-email" placeholder="Email" class="form-control" />
+          <input
+            type="text"
+            name="name"
+            id="input-name"
+            placeholder="Nome"
+            class="form-control"
+          />
+
+          <label for="lastname" class="form-label"
+            ><strong>Sobrenome:</strong></label
+          >
+          <input
+            type="text"
+            name="lastname"
+            id="input-lastname"
+            placeholder="Sobrenome"
+            class="form-control"
+          />
+        </section>
+        <section class="flex-container">
+          <label for="email" class="form-label"
+            ><strong>Email:</strong></label
+          >
+          <input
+            type="email"
+            name="email"
+            id="input-email"
+            placeholder="Email"
+            class="form-control"
+          />
 
           <label for="house" class="form-label"><strong>Casa:</strong></label>
           <select name="house" id="house" class="form-select">
