conclui requisito 20 (req 5 e 14 com erro de CSS)

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
           <section>
             <label for="textarea" class="textarea">Deixe seu comentário:</label>
             <textarea name="textarea" id="textarea" cols="30" rows="5" maxlength="500"></textarea>
+            <label for="textarea" id="counter">500 caracteres restantes</label>
           </section>
 
           <section>
