Resolve problemas no npm testing

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </div>
         </section>
 
-        <section>
+        <section id="rating-trybewarts">
           <label id="label-rate">Como você avalia a Trybewarts?</label>
           <div>
             <label for="1">1 <input type="radio" name="rate" id="1" value="1" /></label>
@@ -106,31 +106,31 @@
             <label for="9">9 <input type="radio" name="rate" id="9" value="9" /></label>
             <label for="10">10 <input type="radio" name="rate" id="10" value="10" /></label>
           </div>
-          <section>
-            <label for="textarea" class="textarea">Deixe seu comentário:</label>
-            <textarea name="textarea" id="textarea" cols="30" rows="5" maxlength="500"></textarea>
-            <label for="textarea" id="counter">500 caracteres restantes</label>
-          </section>
+        </section>
+        <section id="comments-section">
+          <label for="textarea" class="textarea">Deixe seu comentário:</label>
+          <textarea name="textarea" id="textarea" cols="30" rows="5" maxlength="500"></textarea>
+          <label for="textarea" id="counter">500 caracteres restantes</label>
+        </section>
 
-          <section>
-            <label for="checkbox" id="label-infos">Você concorda com o uso das informações acima?</label>
-            <input type="checkbox" name="checkbox" id="agreement" required>
-          </section>
+        <section>
+          <label for="checkbox" id="label-infos">Você concorda com o uso das informações acima?</label>
+          <input type="checkbox" name="checkbox" id="agreement" required>
+        </section>
 
-          <section>
-            <button type="submit" id="submit-btn" disabled>Enviar</button>
-          </section>
+        <section>
+          <button type="submit" id="submit-btn" disabled>Enviar</button>
+        </section>
       </fieldset>
     </form>
     <div class="image-main">
       <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="" />
     </div>
 
-    <footer>
-      Direitos reservados à Trybewarts©
-    </footer>
   </main>
-
+  <footer>
+    Direitos reservados à Trybewarts©
+  </footer>
   <script src="script.js"></script>
 </body>
 
