Adiciona tag strong ao form

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </section>
 
         <section id="rating-trybewarts">
-          <label id="label-rate">Como você avalia a Trybewarts?</label>
+          <label id="label-rate"><strong>Como você avalia a Trybewarts?</strong></label>
           <div>
             <label for="1">1 <input type="radio" name="rate" id="1" value="1" /></label>
             <label for="2">2 <input type="radio" name="rate" id="2" value="2" /></label>
@@ -108,18 +108,18 @@
           </div>
         </section>
         <section id="comments-section">
-          <label for="textarea" class="textarea">Deixe seu comentário:</label>
+          <label for="textarea" class="textarea"><strong>Deixe seu comentário:</strong></label>
           <textarea name="textarea" id="textarea" cols="30" rows="5" maxlength="500"></textarea>
           <label for="textarea" id="counter">500 caracteres restantes</label>
         </section>
 
         <section>
-          <label for="checkbox" id="label-infos">Você concorda com o uso das informações acima?</label>
+          <label for="checkbox" id="label-infos"><strong>Você concorda com o uso das informações acima?</strong></label>
           <input type="checkbox" name="checkbox" id="agreement" required>
         </section>
 
         <section>
-          <button type="submit" id="submit-btn" disabled>Enviar</button>
+          <button type="submit" id="submit-btn" disabled class="btn btn-dark">Enviar</button>
         </section>
       </fieldset>
     </form>
